<resources>
    <string name="app_name">Egy ICU</string>
    <string name="select_language">Please Select your Language.</string>
    <string name="select_language2">من فضلك اختر اللغة.</string>
    <string name="intensive_care">خدمات الرعاية المركزة</string>
    <string name="hadana">حضانات و رعايه اطفال</string>
    <string name="ambulance">طلب سيارة الاسعاف</string>
    <string name="home_delivery">خدمات طبية منزليه</string>
    <string name="about">عن البرنامج</string>
    <string name="contact">اتصل بنا</string>
    <string name="action_settings">Settings</string>
    <string name="enter_data">ادخل بيانات المريض</string>
    <string name="call_doctor">اتصل بالطبيب مباشرة</string>
    <string name="call_us">اتصل بنا</string>
    <string name="charity_icu">رعاية مركزة خيرية</string>
    <string name="patient_name">اسم المريض (مطلوب)</string>
    <string name="patient_name_hint">ادخل اسم المريض</string>
    <string name="patient_age">السن (مطلوب)</string>
    <string name="patient_age_hint">ادخل سن المريض</string>
    <string name="patient_phone">رقم التليفون (مطلوب)</string>
    <string name="patient_phone_hint">ادخل رقم التليفون</string>
    <string name="patient_region">المنطقة (مطلوب)</string>
    <string name="patient_region_hint">ادخل منطقة التواجد</string>
    <string name="patient_contract">هل يوجد تأمين</string>
    <string name="patient_contract_hint">ادخل اسم التأمين</string>
    <string name="patient_case">الحالة</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="ok">موافق</string>
    <string name="accident">حادثة</string>
    <string name="surgery">يحتاج تدخل جراحى</string>
    <string name="respiratory">يحتاج جهاز تنفس</string>
    <string name="kidney">يحتاج غسيل كلوى</string>
    <string name="yellow">صفراء</string>
    <string name="neurology">رعاية مخ و أعصاب</string>
    <string name="liver">رعاية كبد</string>
    <string name="cardiac">رعاية قلب و صدر</string>
    <string name="isolation">يحتاج عزل</string>
    <string name="do_not_know">لا أعلم</string>
    <string name="img_dialog_title">ارفق صورة</string>
    <string name="img_dialog_text">اختر مصدر الصورة</string>
    <string name="sms_dialog_title">ارسال رسالة نصية</string>
    <string name="sms_dialog_text">سيتم ارسال البيانات عن طريق الايميل بالاضافة الى رسالة نصية بسعر الرسالة العادية</string>
    <string name="EMAIL_only">ايميل فقط</string>
    <string name="SMS_EMAIL">ايميل و رسالة</string>
    <string name="warning_dialog_title">تحذير</string>
    <string name="warning_dialog_text">هناك نقص فى البيانات. برجاء ملء كل البيانات المطلوبة</string>
    <string name="camera">الكاميرا</string>
    <string name="gallery">المعرض</string>
    <string name="cancel">الغاء</string>
    <string name="remove">حذف</string>
    <string name="public_ambulance">حكومي بدون طبيب</string>
    <string name="private_ambulance">اسعاف خاص بطبيب (تحت الانشاء)</string>
    <string name="required_service">الخدمه المطلوبه</string>
    <string name="home_call">اتصل بنا مباشرة</string>
    <string name="adminstration">للاداره و الشكاوي و المتابعه</string>
    <string name="email_us">راسلنا بالايميل</string>
    <string name="home_serv">الخدمة المطلوبة</string>
    <string name="home_visit">زيارة طبيب منزلية</string>
    <string name="home_theraby">علاج طبيعى</string>
    <string name="home_nurse">تمريض رعاية مركزة منزلى</string>
    <string name="home_xray">اشعة بالمنزل</string>
    <string name="home_medicine">اجهزة و مستهلكات أو أدوية</string>
    <string name="attach_photo">اضفط على الرمز ادناه لارفاق صورة التقرير (اختيارى)</string>
    <string name="specialized_centers">مراكز طبية متخصصة</string>
    <string name="brain_stroke_unit">وحدة السكتة الدماغية</string>
    <string name="cardiac_unit">وحدة القلب و القسطرة</string>
    <string name="kidney_unit">وحدة الغسيل و زراعة الكلى</string>
    <string name="tabeeb1">اتصل بطبيب 1</string>
    <string name="tabeeb2">اتصل بطبيب 2</string>
    <string name="tabeeb3">اتصل بطبيب 3</string>

    <string name="ICU_MAIL">ahmedshanab1994@gmail.com</string>
    <string name="CHARITY_ICU_MAIL">ahmedshanab1994@gmail.com</string>
    <string name="CHILD_ICU_MAIL">ahmedshanab1994@gmail.com</string>
    <string name="CHARITY_CHILD_ICU_MAIL">ahmedshanab1994@gmail.com</string>
    <string name="HOME_MAIL">ahmedshanab1994@gmail.com</string>

    <string name="ICU_SMS">+201027705505</string>
    <string name="Charity_ICU_SMS">+201027705505</string>
    <string name="Child_ICU_SMS">+201027705505</string>
    <string name="Charity_Child_ICU_SMS">+201027705505</string>
    <string name="Home_SMS">+201027705505</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_menu">MainMenu</string>

    <string name="ICU_DOCTOR1">tel:01111356436</string>
    <string name="ICU_DOCTOR2">tel:01111356436</string>
    <string name="ICU_DOCTOR3">tel:01111356436</string>
    <string name="Ambulance_public">tel:01111356436</string>
    <string name="Ambulance_private">tel:01111356436</string>
    <string name="HOME_DOCTOR1">tel:01111356436</string>
    <string name="HOME_DOCTOR2">tel:01111356436</string>
    <string name="HOME_DOCTOR3">tel:01111356436</string>
    <string name="FOR_Questions">tel:01111356436</string>
    <string name="STROKE">tel:01111356436</string>
    <string name="HEART">tel:01111356436</string>
    <string name="KIDNEY">tel:01111356436</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_hadana__submenu">Hadana_Submenu</string>
    <string name="title_activity_ambulance_submenu">Ambulance_submenu</string>
    <string name="title_activity_home__submenu">Home_Submenu</string>
    <string name="title_activity_about__submenu">About_Submenu</string>
    <string name="title_activity_callus">Callus</string>
</resources>
