<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/back"

    tools:context="com.example.firstapp.ICU_Form"
    android:layoutDirection="rtl">

    <RelativeLayout

        android:layout_width="match_parent"
        android:background="#99FFFFFF"
        android:padding="8dp"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/patient_name"
            android:id="@+id/patient_name"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/patient_name_text"
            android:hint="@string/patient_name_hint"
            android:inputType="text"
            android:layout_below="@id/patient_name"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/patient_age"
            android:id="@+id/age"
            android:layout_below="@id/patient_name_text"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/age_text"
            android:hint="@string/patient_age_hint"
            android:inputType="number"
            android:layout_below="@id/age"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/patient_phone"
            android:id="@+id/phone"
            android:layout_below="@id/age_text"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone_text"
            android:hint="@string/patient_phone_hint"
            android:inputType="number"
            android:layout_below="@id/phone"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/patient_region"
            android:id="@+id/region"
            android:layout_below="@id/phone_text"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/region_text"
            android:hint="@string/patient_region_hint"
            android:inputType="text"
            android:layout_below="@id/region"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/patient_contract"
            android:id="@+id/contract"
            android:layout_below="@id/region_text"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:id="@+id/layout"
            android:orientation="horizontal"
            android:layout_below="@id/contract"
            android:layout_height="wrap_content">


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/contract_yes"
                android:text="@string/yes"
                android:paddingLeft="16dp"
                android:layout_below="@id/layout"
                android:layoutDirection="rtl"
                android:layout_alignParentRight="true"/>


            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/contract_text"
                android:inputType="text"
                android:hint="@string/patient_contract_hint"
                android:visibility="invisible"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />


        </LinearLayout>




        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contract_no"
            android:text="@string/no"
            android:checked="true"
            android:layout_below="@id/layout"
            android:layoutDirection="rtl"
            android:layout_alignParentRight="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/patient_case"
            android:id="@+id/needs"
            android:layout_below="@id/contract_no"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/accident_checkbox"
            android:text="@string/accident"
            android:layout_below="@id/needs"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/surgery_checkbox"
            android:text="@string/surgery"
            android:layout_below="@id/accident_checkbox"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/respiratory_checkbox"
            android:text="@string/respiratory"
            android:layout_below="@id/surgery_checkbox"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/kidney_checkbox"
            android:text="@string/kidney"
            android:layout_below="@id/respiratory_checkbox"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/yellow_checkbox"
            android:text="@string/yellow"
            android:layout_below="@id/kidney_checkbox"
            android:visibility="gone"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/neurology_checkbox"
            android:text="@string/neurology"
            android:layout_below="@id/yellow_checkbox"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/liver_checkbox"
            android:text="@string/liver"
            android:layout_below="@id/neurology_checkbox"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cardiac_checkbox"
            android:text="@string/cardiac"
            android:layout_below="@id/liver_checkbox"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/isolation_checkbox"
            android:text="@string/isolation"
            android:layout_below="@id/cardiac_checkbox"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/do_not_know_checkbox"
            android:text="@string/do_not_know"
            android:layout_below="@id/isolation_checkbox"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/home_visit_checkbox"
            android:text="@string/home_visit"
            android:layout_below="@id/do_not_know_checkbox"
            android:visibility="gone"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/home_theraby_checkbox"
            android:text="@string/home_theraby"
            android:layout_below="@id/home_visit_checkbox"
            android:visibility="gone"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/home_nurse_checkbox"
            android:text="@string/home_nurse"
            android:layout_below="@id/home_theraby_checkbox"
            android:visibility="gone"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/home_xray_checkbox"
            android:text="@string/home_xray"
            android:layout_below="@id/home_nurse_checkbox"
            android:visibility="gone"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/home_medicine_checkbox"
            android:text="@string/home_medicine"
            android:layout_below="@id/home_xray_checkbox"
            android:visibility="gone"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attach_photo"
            android:id="@+id/photo"
            android:layout_below="@id/home_medicine_checkbox"/>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageView"
            android:src="@drawable/attach"
            android:tag="null"
            android:layout_below="@id/photo"
            android:layout_centerInParent="true"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submit_button"
            android:text="submit"
            android:layout_below="@id/imageView"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</ScrollView>
